# Simple3D

./: .gitignore  3D.cpp  3D.h  CMakeLists.txt  README.md  Scene.cpp  Scene.h  camera.cpp  camera.h  gameObject.h  main.cpp  matrix.cpp  matrix.h  polyhedron.cpp  polyhedron.h
src/: 3D.cpp  3D.h  CMakeLists.txt  Globals.h  Scene.cpp  Scene.h  camera.cpp  camera.h  gameObject.h  main.cpp  matrix.cpp  matrix.h  polyhedron.cpp  polyhedron.h
